# TinyMoeFace_Qt

./: .gitmodules  ARAPDeformer.cpp  ARAPDeformer.h  AbstractDeformer.cpp  AbstractDeformer.h  CGALTriangulator.cpp  CGALTriangulator.h  CGALUtil.cpp  CGALUtil.h  CMakeLists.txt  DeformDialog.cpp  DeformDialog.h  DeformDialog.ui  DeformWidget.cpp  DeformWidget.h  FaceAlignmentWidget.cpp  FaceAlignmentWidget.h  FaceOutlineReader.cpp  FaceOutlineReader.h  PhysicsDeformer.cpp  PhysicsDeformer.h  README.md  SimpleCameraSurface.cpp  SimpleCameraSurface.h  SimpleDeformer.cpp  SimpleDeformer.h  main.cpp
